turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:15: error: type mismatch;
 found   : Array[Int]
 required: Int
var T = new Array(Array[Int](2))
                            ^Turmite:15: error: type mismatch;
 found   : Array[Int]
 required: Int
var T = new Array(Array[Int](2))
                            ^Turmite:16: error: type mismatch;
 found   : Array[Int]
 required: Int
var U = new Array(Array[Int](2))
                            ^Turmite:16: error: type mismatch;
 found   : Array[Int]
 required: Int
var U = new Array(Array[Int](2))
                            ^Turmite:65: error: not found: value x
  state = rule(state)(x)(2)
                      ^Turmite:72: error: not found: value init
		init();
                ^Turmite:99: error: ambiguous reference to overloaded definition,
both method step in class Turmite of type (colors: Array[java.awt.Color])Unit
and  method step in class Turmite of type (colors: Array[java.awt.Color])Unit
match argument types (Array[java.awt.Color])
			step(colors);
                        ^Turmite:55: error: method step is defined twice
  conflicting symbols both originated in file 'plm.runtime183.Turmite'
def step(colors:Array[Color] ) {
    ^